# exqudens-py-example

./: .env  project.py  pyproject.toml  readme.md
src/main/py/exqudens/example/: __init__.py  example.py
src/test/py/: utils_for_test.py
src/test/py/unit/: test_unit_all.py
src/test/resources/vscode/: launch.json
